--- a/css/panel-hubble.css
+++ b/css/panel-hubble.css
@@ -5,3 +5,55 @@ a:link, a:visited {
 .clearfix a{
     cursor: pointer !important;
 }
+
+#user_name{
+    padding-left: 1em;
+    padding-top: 0.2em;
+}
+
+#u12348{
+    opacity: 1 !important;
+}
+
+.container{
+    padding: 1em 1em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+.box-info{
+    border: 1px solid #ececec;
+    border-radius: 5px;
+}
+.box-info h1 {
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    box-sizing: border-box;
+    font-size: 16px;
+    background: #5e5e5e;
+    color: #fff;
+    margin: 0 0 0 0;
+    padding: 0 0 0 15px;
+    border-radius: 5px;
+}
+.lines > div {
+    padding: 0 15px;
+    box-sizing: border-box;
+    display: table;
+    width: 100%;
+    height: 36px;
+    line-height: 36px;
+    font-family: OpenSansRegular, Arial;
+    font-size: 14px;
+    border-top: 1px solid rgba(0,0,0,0.2);
+}
+.lines > div span {
+    float: right;
+    font-family: OpenSansSemibold, Arial;
+    font-weight: bold;
+}
+.lines > div.two {
+    background: rgba(0,0,0,0.05);
+}
