--- a/css/panel-hubble.css
+++ b/css/panel-hubble.css
@@ -15,6 +15,9 @@ a:link, a:visited {
     opacity: 1 !important;
 }
 
+.user-info{
+    margin-top: 2em;
+}
 .container{
     padding: 1em 1em;
     display: grid;
@@ -57,3 +60,71 @@ a:link, a:visited {
 .lines > div.two {
     background: rgba(0,0,0,0.05);
 }
+
+.chars-container{
+    padding: 2em 1em;
+    display: grid;
+    grid-template-rows: 20px 1fr;
+    grid-gap: 20px;
+}
+.row{
+    text-align: center;
+}
+.name-character{
+    width: 20em;
+}
+#make-donation, #history-donation,#transfer-donation,#changePass,#changeMail,#topPvp,#topPk,#topClan,#bossJewells{
+    display: none;
+}
+#u12374,#u12377-4,#u12410-3{
+    cursor: pointer;
+}
+.option-panel{
+    padding:1em;
+}
+.subtitle{
+    font-weight: 500 ;
+    font-size: x-large ;
+    text-align: center;
+    padding-top: 1.5em;
+    margin-bottom: 2em;
+}
+.amount-to-transfer{
+    border: 1px solid black;
+    border-radius: 2px;
+}
+.transfer-btn {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    background-color: #4CAF50;
+}
+
+#topList {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#topList th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: rgb(53, 34, 34);
+    color: white;
+    padding-left: 1rem;
+}
+#topList td, #customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+  
+#topList tr:nth-child(even){background-color: #f2f2f2;}
+  
+#topList tr:hover {background-color: #ddd;}
