mail inputs validations, first fetch in API from backend

--- a/css/hubble.css
+++ b/css/hubble.css
@@ -6,6 +6,9 @@
   cursor:pointer !important;
   padding-left: 2em;
 }
+.registerSubmit{
+  cursor: pointer !important;
+}
 a:visited,a:link, a:hover {
     color: white;
     background-color: transparent;
