--- a/css/hubble.css
+++ b/css/hubble.css
@@ -104,3 +104,7 @@ a:visited,a:link, a:hover {
 .hidden{
   overflow: hidden !important;
 }
+
+#recoveryPassordLink{
+  cursor: pointer !important;
+}
