--- a/css/hubble.css
+++ b/css/hubble.css
@@ -108,3 +108,7 @@ a:visited,a:link, a:hover {
 #recoveryPassordLink{
   cursor: pointer !important;
 }
+
+.serverOn {
+  color: chartreuse !important;
+}
