--- a/css/panel-hubble.css
+++ b/css/panel-hubble.css
@@ -224,3 +224,11 @@ a:link, a:visited {
 .btnKhipu:hover{
     cursor: pointer;
 }
+.prePurchase{
+
+}
+#selectAmountDonation, #selectCharDonation{
+    margin-right: 2%;
+    padding: 0.5%;
+    font-size: 16px;
+}
