--- a/css/hubble.css
+++ b/css/hubble.css
@@ -126,3 +126,7 @@ a:visited,a:link, a:hover {
 #u12957-4{
   margin-top: -4rem !important;
 }
+.swal2-loader{
+  transform-origin: initial !important;
+}
+
